# SynthExperiments

./: .gitattributes  .gitmodules  README.md
Android/Csound-Tuning-Fork/: settings.gradle.kts
Android/Csound-Tuning-Fork/app/: build.gradle.kts
Android/Csound-Tuning-Fork/app/src/androidTest/java/de/wpvs/csound/tuningfork/: ExampleInstrumentedTest.kt
Android/Csound-Tuning-Fork/app/src/main/: AndroidManifest.xml
Android/Csound-Tuning-Fork/app/src/main/java/de/wpvs/csound/tuningfork/: MainActivity.kt
Android/Csound-Tuning-Fork/app/src/main/java/de/wpvs/csound/tuningfork/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/Csound-Tuning-Fork/app/src/main/res/values/: strings.xml  themes.xml
Android/Csound-Tuning-Fork/app/src/test/java/de/wpvs/csound/tuningfork/: ExampleUnitTest.kt
Android/Csound-Tuning-Fork/gradle/: libs.versions.toml
Android/Csound-Tuning-Fork/gradle/wrapper/: gradle-wrapper.properties
Csound/: README.md
Csound/Analog Bread and Butter/: README.md
Csound/Schoko FM4/: README.md  Schoko FM4.csd
Csound/Schoko FM4/Export/Linux x64 (Standalone)/: Schoko FM4.csd
Csound/Schoko FM4/Presets/: Rhodes 1 (Default Sound).preset
Csound/Tuning Fork/: README.md  Tuning Fork.csd
Native/Csound Minimal C/: CMakeLists.txt  README.md  build-and-run.sh  config.h.in  menuconfig.sh
Native/Csound Minimal C/src/: os.h
Native/Csound Minimal C/src/os/: apple.c  unix.c  windows.c
Native/Csound Minimal CPP/: CMakeLists.txt  README.md  build-and-run.sh
Native/Csound Minimal CPP/src/: assets.cpp  assets.hpp  main.cpp  os.hpp
Native/Csound Minimal CPP/src/os/: apple.cpp  unix.cpp  windows.cpp
Native/Csound Tuning Fork/: CMakeLists.txt  README.md  build-and-run.sh  config.hpp
Native/Csound Tuning Fork/assets/: csound.csd
Native/Csound Tuning Fork/src/: assets.cpp  assets.hpp  common.hpp  imgui_backend.hpp  main.cpp  os.hpp  ui.cpp  ui.hpp
Native/Csound Tuning Fork/src/imgui_backend/: sdl2.cpp
Native/Csound Tuning Fork/src/os/: apple.cpp  unix.cpp  windows.cpp
Native/Minimal Skeleton/: CMakeLists.txt  README.md  build-and-run.sh
Native/Minimal Skeleton (C)/: CMakeLists.txt  README.md
Native/Minimal Skeleton (C)/assets/: csound.csd
Native/Minimal Skeleton (C)/src/: assets.h  main.c
Native/Minimal Skeleton (C)/src/os/: unix.c
Native/Minimal Skeleton/src/: assets.c  assets.h  main.c  os.h
Native/Minimal Skeleton/src/os/: apple.c  unix.c  windows.c
Native/Tuning Fork/: CMakeLists.txt  README.md  build-and-run.sh  clean-and-build.sh
Native/Tuning Fork/assets/: csound.csd
Native/Tuning Fork/src/: main.cpp
Native/cmake/: CmakeFunctions.cmake  FindCsound.cmake  FindCsound6.cmake  FindCsound6_CXX.cmake  FindCsound7.cmake  FindCsound7_CXX.cmake  FindDearImGui.cmake  FindDearImGui_SDL2.cmake  FindImGui.cmake  FindImGuiKnobs.cmake  FindImGuiToggle.cmake  FindImGui_SDL2.cmake
Puredata/: README.md
Puredata/FM4/: README.md
Puredata/Harmonic Reynthesis/: README.md  harmonic-resynthesis.pd  main.pd  oscillator-line~.pd  oscillator.pd
Puredata/Harmonic Reynthesis/Analysis Results/: Accordion.resynth  Bagpipe.resynth  Big Little Bass.resynth  FM Bass.resynth  Piany.resynth  Pipe Organ.resynth  README.md  Spanish Guitar.resynth  Synth Bass.resynth  Synth String.resynth  Trumpet.resynth  Upright Piano.resynth  Vocal Baah.resynth  Wine Glass.resynth
Puredata/Harmonic Reynthesis/envgen/: envgen~.pd
Puredata/Mini Clavier/: README.md  apply-modulation.pd  clone-voice.pd  main.pd  main1.pd  main2.pd  osc-carrier.pd  osc-modulator.pd  partial-parameters.pd  partial-ui.pd  partial.pd  pitch-env.pd  tonegen-multi-process-forward-partial-parameters.pd  tonegen-multi-process.pd  tonegen-single-process.pd  tonegen-subprocess.pd  voice.pd
Puredata/Mini Clavier/Presets/: Unprecission Bass.preset  Whistle.preset
Puredata/Mini Clavier/envgen/: iaddr~.pd
Puredata/Mini Clavier/pd~/: forward.pd
Puredata/Mini Clavier/preset/: preset-value.pd  preset-value1.pd
Puredata/Mini Clavier/utils/: lfo.pd  poly-sustain.pd
Puredata/Multi-Processing/: main.pd  subprocess.pd
Puredata/Multi-Processing/pd~/: wrapper.pd
Puredata/Reusable Abstractions/: README.md
Puredata/Reusable Abstractions/chorus/: README.md
Puredata/Reusable Abstractions/envgen/: README.md  egui-get-breakpoint-list.pd  envgen-gui.pd  envgen~.pd  iaddr~.pd
Puredata/Reusable Abstractions/pd~/: README.md  forward-to.pd  wrapper.pd
Puredata/Reusable Abstractions/preset/: README.md  preset-value.pd  preset-value1.pd
Puredata/Reusable Abstractions/utils/: README.md  poly-sustain.pd
Puredata/Reusable Abstractions/voice_allocator/: README.md  voice_allocator.pd
Puredata/Tuning Fork/: README.md  main.pd  main1.pd  voice.pd
Puredata/Unicorn Wave/: README.md  apply-modulation.pd  filter.pd  init-global.pd  init-oscillator.pd  init-partial.pd  main.pd  main1.pd  main2.pd  oscillator.pd  partial-add-harmonic.pd  partial-clear-wavetables.pd  partial-wavetables.pd  partial.pd  preset-values-partial.pd  voice.pd
Puredata/Unicorn Wave/Presets/: Blues Harp.preset  Deep Rambling.preset  Default Sound.preset  String Section (Default Sound).preset
Puredata/Unicorn Wave/envgen/: envgen~.pd
Puredata/Unicorn Wave/old/: main.pd
Puredata/Unicorn Wave/utils/: lfo.pd
Puredata/Unicorn Wave/wavetables/saw/: wavetable-saw.pd
Puredata/Unicorn Wave/wavetables/sin/: wavetable-sin.pd
Puredata/Unicorn Wave/wavetables/square/: wavetable-square.pd
Puredata/Unicorn Wave/wavetables/triangle/: wavetable-triangle.pd
Puredata/Vanilla Sustain Pedal/: README.md  main.pd  voice.pd
Puredata/Wave Table Generator/: README.md  generate-wavetables (PD Vanilla).pd  generate-wavetables.pd
